# rust-webapp

./: Cargo.toml  README.md  create_tables.sh  docker-compose.yml  init.sql
src/: main.rs
src/api/: clients.rs  errors.rs  mod.rs  schema.rs
src/common/: connection.rs
src/model/: customer.rs
