[package]
name = "web-rust"
version = "0.1.0"
authors = ["knucker"]
edition = "2018"

[features]
default = ["postgres"]

[dependencies]
percent-encoding = "1.0.1"
serde_json = "1.0"
serde = { version = "1.0.92", features = ["derive"] }
r2d2_postgres = "0.14.0"
actix-web = "1.0.2"
futures = "0.1.27"
failure = "0.1.5"
log = "0.4.0"
env_logger = "0.6.2"

[dependencies.postgres]
version = "0.15"
features = ["with-rustc-serialize","with-serde_json"]
optional = true
